# paperless-telegram-bot

./: .dockerignore  .env.example  .ghost-portfolio.yml  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  dockerhub-description.yml  lint.yml  pypi-publish.yml  tests.yml
docs/: ROADMAP.md
src/paperless_bot/: __init__.py  __main__.py  config.py
src/paperless_bot/api/: client.py
src/paperless_bot/bot/: handlers.py  keyboards.py
tests/: test_client.py  test_config.py  test_handlers.py  test_keyboards.py  test_main.py
